--- a/subgraphs/pairs/package.json
+++ b/subgraphs/pairs/package.json
@@ -8,6 +8,6 @@
   "scripts": {
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
-    "deploy": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/pairs subgraph.yaml"
+    "deploy": "graph deploy --node http://${GRAPH_LOCAL_IP}:8020/ --ipfs http://${GRAPH_LOCAL_IP}:5001 pancakeswap/pairs subgraph.yaml"
   }
 }
