--- a/subgraphs/user-position-v3/template/subgraph.yaml
+++ b/subgraphs/user-position-v3/template/subgraph.yaml
@@ -8,11 +8,11 @@ features:
 dataSources:
   - kind: ethereum/contract
     name: Factory
-    network: mainnet
+    network: zkatana
     source:
-      address: "0x0bfbcf9fa4f9c56b0f40a671ad40e0805a091865"
+      address: "0xB1e42916769D61d83D0d427196dA32D32B93a3ee"
       abi: Factory
-      startBlock: 16950686
+      startBlock: 335437
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -37,11 +37,11 @@ dataSources:
           handler: handlePoolCreated
   - kind: ethereum/contract
     name: NonfungiblePositionManager
-    network: mainnet
+    network: zkatana
     source:
-      address: "0x46a15b0b27311cedf172ab29e4f4766fbe7f4364"
+      address: "0xa815e2ed7f7d5b0c49fda367f249232a1b9d2883"
       abi: NonfungiblePositionManager
-      startBlock: 16944786
+      startBlock: 8640657
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -69,7 +69,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: Pool
-    network: mainnet
+    network: zkatana
     source:
       abi: Pool
     mapping:
